<resources>
    <string name="app_name">Works</string>

    <string name="login_username">Vartotojo vardas</string>
    <string name="login_password">Slaptažodis</string>
    <string name="login_button">Prisijungti</string>

    <string name="login_u_error">Klaidingai ivestas Vartotojo vardas</string>
    <string name="login_p_error">Klaidingai ivestas Slpatažodis</string>

    <string name="register_button">Registruotis</string>
    <string name="register_name">Registracija</string>
    <string name="email">Email</string>
    <string name="register_email_error">Klaidingai ivestas Email</string>
    <string name="register_admin_checkbox">Administratorius</string>

    <string name="main_hello">Sveiki prisijunge!</string>
    <string name="main_new_item">Įveskite naują užduotį</string>
    <string name="main_exit_button">Atsijungti</string>
    <string name="main_add_item">Pridėti</string>
    <string name="main_edit_button">Redaguoti</string>
    <string name="main_delete_button">Pašalinti</string>

    <string name="edit_popup_text">Redaguojame įrašą</string>
    <string name="popup_button">Išsaugoti</string>

    <string name="admin_hello">Admin aplinka!</string>

</resources>